# kaiwa

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: security.yml  test.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  HOTKEY.md  SETUP.md  TROUBLESHOOTING.md  pitch-short.md  pitch.md
docs/assets/: mockup-notification.html  mockup-output.html  mockup-workflow.html
scripts/: install-daemon.sh  raycast-toggle-record.sh  toggle-record.sh  watch-recordings.sh
src/kaiwa/: __init__.py  __main__.py  cli.py  config.py  diarize.py  output.py  summarize.py  transcribe.py  utils.py
tests/: __init__.py  conftest.py  test___main__.py  test_cli.py  test_config.py  test_diarize.py  test_output.py  test_summarize.py  test_transcribe.py  test_utils.py
