[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaiwa"
version = "0.1.0"
description = "対面会話の文字起こし・話者分離・AI要約ツール"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Tigrit", email = "toranosuke.takayama@tigrit.jp"}
]
dependencies = [
    "whisperx==3.7.6",
    "anthropic==0.77.0",
    "PyYAML==6.0.3",
]

[project.scripts]
kaiwa = "kaiwa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
